<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.startquiz.StartQuizFragment"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="83dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="@string/welcome_to_quiz"
        android:textColor="@color/white"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="304dp"
        android:layout_height="81dp"
        android:layout_below="@id/textTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/okay_dear_harry_potter_fan_let_s_start_our_quiz"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnStartQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_quiz"
        android:layout_below="@id/textDescription"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp" />


</RelativeLayout>